# cam2web

./: CMakeLists.txt
src/apps/linux/: cam2web.cpp
src/core/: XError.hpp  XJpegEncoder.cpp  XJpegEncoder.hpp  XObjectConfigurationSerializer.cpp  XVideoSourceToWeb.cpp  XVideoSourceToWeb.hpp  XWebServer.cpp  XWebServer.hpp
src/core/cameras/V4L2/: XV4LCamera.cpp
src/tools/web2h/: CMakeLists.txt
src/web/: cameraproperties.html  index.html  login.html
